[package]
name = "wasm-frontmatter"
version = "0.1.2"
authors = ["Josh Finnie <josh@jfin.us>"]
edition = "2018"
description = "wasm-frontmatter extracts the frontmatter data from markdown."
license = "MIT"
repository = "git+https://github.com/joshfinnie/wasm-frontmatter.git"
homepage = "https://github.com/joshfinnie/wasm-frontmatter"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.13"
wasm-bindgen = { version = "0.2.64", features = ["serde-serialize"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
